--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp": "^3.8.7"
   },
   "devDependencies": {
-    "gulp-ruby-sass": "^0.7.1"
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-uglifyjs": "^0.4.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
